; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_ssl_test_ctx.c_SSL_TEST_CTX_new.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_ssl_test_ctx.c_SSL_TEST_CTX_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@default_app_data_size = common dso_local global i32 0, align 4
@default_max_fragment_size = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_4__* @SSL_TEST_CTX_new() #0 {
  %1 = alloca %struct.TYPE_4__*, align 8
  %2 = call %struct.TYPE_4__* @OPENSSL_zalloc(i32 8)
  store %struct.TYPE_4__* %2, %struct.TYPE_4__** %1, align 8
  %3 = icmp ne %struct.TYPE_4__* %2, null
  br i1 %3, label %4, label %11

4:                                                ; preds = %0
  %5 = load i32, i32* @default_app_data_size, align 4
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 1
  store i32 %5, i32* %7, align 4
  %8 = load i32, i32* @default_max_fragment_size, align 4
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  br label %11

11:                                               ; preds = %4, %0
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  ret %struct.TYPE_4__* %12
}

declare dso_local %struct.TYPE_4__* @OPENSSL_zalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
